Доработал все адекватные команды, остались неадекватные + Сохранение в JSON + исполнение скрипта. А еще сделал проверку ввода inline команды у пользователя